tests/assert_operator_unparsed/assert_operator_unparsed.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:4

Unexpected token `!`, expected the end of an expression statement (`;`)

   3|   a! as number;
         ^



Found 1 error
